--- a/src/App.global.css
+++ b/src/App.global.css
@@ -5,7 +5,26 @@
 
 @import 'react-toastify/dist/ReactToastify.css';
 body {
-  background-color: rgb(245, 243, 243)
+  background-color: rgb(245, 243, 243);
+  overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 .row>* {
@@ -218,4 +237,31 @@ background-color: #0d6efd78;
 
 .playlist-result-downloaded{
   background-color: #00e41c8f
+}
+
+.table-head>.row, .table-body>.row{
+  margin:0 !important;
+}
+
+.table-body>.row{
+  padding: 5px 0;
+}
+
+.table-head{
+  font-weight: bold;
+  font-size: 18px;
+  padding: 10px 0 10px 15px;
+  border-bottom: 1px solid gray;
+  margin-bottom: 10px;
+}
+
+.table-body{
+  font-size: 17px;
+  padding: 5px 0 5px 15px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+#history-results{
+  background: white;
 }
